@@ -80,7 +80,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="..\..\Packages\DelphiTwain\units"/>
+      <OtherUnitFiles Value="..\..\Packages\DelphiTwain\units;..\..\Packages\bgrabitmap\bgrabitmap"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Parsing>
